feat: cria rota de validate para o front poder verificar se o token do usuario e valido